fix: use per-version baseline count as denominator for grouped percentage reports